--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bcrypt==3.1.4
 blinker==1.4
 cffi==1.11.5
 Click==7.0
+coverage==4.5.4
 decorator==4.3.0
 Faker==0.9.1
 Flask==1.0.2
@@ -11,6 +12,7 @@ Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 ipython==7.0.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
